# Firedecor

./: .gitignore  README.md  meson.build
.cache/clangd/index/: firedecor-buttons.cpp.12161191F086028F.idx  firedecor-buttons.hpp.258EBB19D7467D15.idx  firedecor-layout.cpp.F16EBCE39143FA50.idx  firedecor-layout.hpp.FAFBF831F1D55690.idx  firedecor-subsurface.cpp.1F685A91E1D5763D.idx  firedecor-subsurface.hpp.AA7372641F44EFE4.idx  firedecor-theme.cpp.B3F31399DBD09FE2.idx  firedecor-theme.hpp.0AE6996D33FA3EB4.idx  firedecor.cpp.FEF66691F58568EE.idx
metadata/: firedecor.xml  meson.build
src/: .my_plugin.cc.kak.B7xf4g  .my_plugin.cc.kak.VlHRRe  cairo-simpler.hpp  firedecor-buttons.cpp  firedecor-buttons.hpp  firedecor-layout.cpp  firedecor-layout.hpp  firedecor-subsurface.cpp  firedecor-subsurface.hpp  firedecor-theme.cpp  firedecor-theme.hpp  firedecor.cpp  firedecor.xml  meson.build
src/.ccls-cache/@@home@mateus@Documents@Development@Wayfire@my_plugin@src/: @usr@include@GLES3@gl3.h.blob  @usr@include@GLES3@gl3platform.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  (+405 more)
src/.ccls-cache/@home@mateus@Documents@Development@Wayfire@my_plugin@src/: firedecor-buttons.hpp.blob  firedecor-theme.cpp  firedecor-theme.cpp.blob  firedecor-theme.hpp  firedecor-theme.hpp.blob
